--- a/frontend/src/pages/style.css
+++ b/frontend/src/pages/style.css
@@ -44,7 +44,6 @@ p {
   margin: 10px;
   border-radius: 20px;
   border: none;
-  transition: 0.2s ease;
 }
 
 .hero-section .hero-btn:hover {
@@ -58,6 +57,27 @@ p {
 
 .hero-section .hero-btn:hover .arrow-icon {
   transform: translateX(15px);
+}
+
+@media screen and (max-width: 1000px) {
+  .hero-section h2 {
+    font-size: 2.5rem;
+  }
+  .hero-section p {
+    font-size: 1rem;
+  }
+  .hero-section .hero-btn {
+    transition: 1s ease-in-out;
+    padding: 5px 30px;
+    margin: 10px;
+    border-radius: 20px;
+    border: none;
+  }
+  .hero-section {
+    background-image: url("../assets/hero.jpg");
+    background-position: center;
+    margin-bottom: 20px;
+  }
 }
 
 .home-section h1 {
@@ -114,13 +134,6 @@ p {
   color: #444 !important;
 }
 
-.category-items {
-  margin: 40px 0px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  flex-wrap: wrap;
-}
 .category-item {
   border-radius: 50%;
   margin: 10px 30px;
@@ -141,7 +154,6 @@ p {
 }
 .category-item h3 {
   transition: 0.5s ease;
-  /* display: none; */
   color: #fff;
   z-index: 2;
   font-size: 20px;
@@ -164,9 +176,17 @@ p {
   background-color: rgba(122, 0, 122, 0.5);
 }
 .category-slider {
-  width: 80%;
-  margin: 0 auto;
-  position: relative;
+  width: 100%;
+}
+@media screen and (max-width: 700px) {
+  .category-slider {
+    width: 100%;
+    margin: 0 auto;
+    position: relative;
+  }
+  .category-item {
+    margin: 5px 10px;
+  }
 }
 
 .blogs-section {
@@ -218,6 +238,7 @@ p {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
   color: white;
   border-bottom: 1px solid rgb(158, 158, 158);
 }
@@ -268,16 +289,36 @@ p {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 .email-submit {
-  background-color: black;
   color: #fff;
   margin: 0;
   border-radius: none;
   padding: 10px 50px;
-  border: none;
   transition: 0.2s ease;
+  background-color: transparent;
+  border: 1px solid rgb(190, 190, 190);
 }
 .email-submit:hover {
   background-color: #222;
+}
+@media screen and (max-width: 700px) {
+  .email-section h1 {
+    font-weight: 400;
+  }
+  .email-section p {
+    margin: 10px 80px;
+    font-size: 1.2rem;
+  }
+  .email-input {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+  .email-submit {
+    background-color: transparent;
+    border: 1px solid rgb(190, 190, 190);
+    margin: 10px;
+  }
 }
 
 /* ALL BLOGS PAGE  */
