--- a/frontend/src/pages/style.css
+++ b/frontend/src/pages/style.css
@@ -619,3 +619,7 @@ p {
 .ql-editor h6 {
   color: black !important; /* Ensures headers are always black */
 }
+
+.blog-content-view p {
+  color: black !important;
+}
